Improved styling and added links

--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
     <title>Chro-lol-lol-lol-lol</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
 </head>
-<body>
+<body class="middle-center-content">
     <div class="grid-container">
 
         <!-- Git hub -->
-        <div class="grid-cell-12 grid-cell-lg-3 middle-center-content">
+        <div class="grid-cell-12 grid-cell-lg-3 grid-cell-padded middle-center-content">
             <div class="circle-sizer-medium shuffler">
                 <div class="circle-container">
                     <div class="circle"></div>
-                    <div class="circle hover">Github</div>
+                    <a href="https://github.com/Chrolo/"><div class="circle hover">Github</div></a>
                 </div>
             </div>
         </div>
 
         <div class="grid-cell-12 grid-cell-lg-6 middle-center-content"></div>
 
-        <!-- placeholder -->
-        <div class="grid-cell-12 grid-cell-lg-3 middle-center-content">
+        <!-- DameDesuYo -->
+        <div class="grid-cell-12 grid-cell-lg-3 grid-cell-padded middle-center-content">
             <div class="circle-sizer-medium shuffler">
                 <div class="circle-container">
                     <div class="circle"></div>
-                    <div class="circle hover">place holder</div>
+                    <a href="https://damedesuyo.com/"><div class="circle hover">Dame<br/>Desu<br/>Yo</div></a>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
         <div class="grid-cell-12 grid-cell-lg-4 middle-center-content"></div>
 
         <!-- About me -->
-        <div id="about-me-circle" class="grid-cell-12 grid-cell-lg-4 middle-center-content">
+        <div id="about-me-circle" class="grid-cell-12 grid-cell-lg-4 grid-cell-padded middle-center-content">
             <div class="circle-sizer-large shuffler">
                 <div class="circle-container">
                     <img class="circle" src="/static/imgs/chrolo.png"/>
@@ -42,12 +42,12 @@
 
         <div class="grid-cell-12 grid-cell-lg-4 middle-center-content"></div>
 
-        <!-- Git hub -->
-        <div class="grid-cell-12 middle-center-content">
+        <!-- Shuffle Stop -->
+        <div class="grid-cell-12 grid-cell-padded middle-center-content">
             <div class="circle-sizer-small shuffler">
                 <div class="circle-container">
                     <div class="circle"></div>
-                    <div class="circle hover" onclick="Shuffler.toggleShuffling()">Toggle Shuffle</div>
+                    <a href="#"><div class="circle hover" onclick="Shuffler.toggleShuffling()">Toggle Shuffle</div></a>
                 </div>
             </div>
         </div>
